--- a/index.html
+++ b/index.html
@@ -8,13 +8,22 @@
     </head>
     <body class="container-fluid">
       <h1>Example</h1>
-
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-      eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-      ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-      est laborum.</p>
+      <div class = "container">
+          <div class="row game-board">
+            <div class="col-xs-4">a</div>
+            <div class="col-xs-4">b</div>
+            <div class="col-xs-4">c</div>
+          </div>
+          <div class="row game-board">
+            <div class="col-xs-4">d</div>
+            <div class="col-xs-4">e</div>
+            <div class="col-xs-4">f</div>
+          </div>
+          <div class="row game-board">
+            <div class="col-xs-4">g</div>
+            <div class="col-xs-4">h</div>
+            <div class="col-xs-4">i</div>
+          </div>
+      </div>
     </body>
 </html>
