--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
       <h1>Example</h1>
       <div class = "container">
           <div class="row game-board">
-            <div class="col-xs-4">a</div>
-            <div class="col-xs-4">b</div>
-            <div class="col-xs-4">c</div>
+            <div id="box1" class="col-xs-4">a</div>
+            <div id="box2" class="col-xs-4">b</div>
+            <div id="box3" class="col-xs-4">c</div>
           </div>
           <div class="row game-board">
-            <div class="col-xs-4">d</div>
-            <div class="col-xs-4">e</div>
-            <div class="col-xs-4">f</div>
+            <div id="box4" class="col-xs-4">d</div>
+            <div id="box5" class="col-xs-4">e</div>
+            <div id="box6" class="col-xs-4">f</div>
           </div>
           <div class="row game-board">
-            <div class="col-xs-4">g</div>
-            <div class="col-xs-4">h</div>
-            <div class="col-xs-4">i</div>
+            <div id="box7" class="col-xs-4">g</div>
+            <div id="box8" class="col-xs-4">h</div>
+            <div id="box9" class="col-xs-4">i</div>
           </div>
       </div>
     </body>
