--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
-
+      <title>TicTacToe</title>
       <script src="vendor.bundle.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="bundle.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body class="container-fluid">
-      <h1>Example</h1>
+      <h1 id="game-title" class="col-lg-12">Tic.Tac.Toe.</h1>
       <div class = "container">
           <div class="row game-board">
             <div id="box1" class="col-xs-4">a</div>
@@ -25,5 +24,10 @@
             <div id="box9" class="col-xs-4">i</div>
           </div>
       </div>
+      <div class = "player-score">
+          <h3 id="playerXScore">Player X</h3>
+          <h3 id="playerOScore">Player O</h3>
+      </div>
+
     </body>
 </html>
