name fields index.html Added player x and player o name fields in index.html

--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
           <h3 id="playerXScore">Player X</h3>
           <h3 id="playerOScore">Player O</h3>
       </div>
-
+      <form id="player-x-name">
+      <fieldset>
+        <legend>Player X</legend>
+        <input type="name" name="credentials[name]" placeholder="Your Name">
+        <input type="submit" name="submit" value="player-x-name">
+      </fieldset>
+      </form>
+      <form id="player-o-name">
+      <fieldset>
+        <legend>Player O</legend>
+        <input type="name" name="credentials[name]" placeholder="Your Name">
+        <input type="submit" name="submit" value="player-o-name">
+      </fieldset>
+      </form>
     </body>
 </html>
