--- a/index.html
+++ b/index.html
@@ -4,24 +4,25 @@
       <title>TicTacToe</title>
       <script src="vendor.bundle.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="bundle.js" type="text/javascript" charset="utf-8" defer></script>
+      <script src="/scripts/game/maingame.js" type="text/javascript" charset="utf-8" defer>></script>
     </head>
     <body class="container-fluid">
       <h1 id="game-title" class="col-lg-12">Tic.Tac.Toe.</h1>
       <div class = "container">
           <div class="row game-board">
-            <div id="box1" class="col-xs-4" onclick="displayLetter('box1')">a</div>
-            <div id="box2" class="col-xs-4" onclick="displayLetter('box2')">b</div>
-            <div id="box3" class="col-xs-4" onclick="displayLetter('box3')">c</div>
+            <div id="box1" class="col-xs-4" onclick="displayLetter('box1')"></div>
+            <div id="box2" class="col-xs-4" onclick="displayLetter('box2')"></div>
+            <div id="box3" class="col-xs-4" onclick="displayLetter('box3')"></div>
           </div>
           <div class="row game-board">
-            <div id="box4" class="col-xs-4" onclick="displayLetter('box4')">d</div>
-            <div id="box5" class="col-xs-4" onclick="displayLetter('box5')">e</div>
-            <div id="box6" class="col-xs-4" onclick="displayLetter('box6')">f</div>
+            <div id="box4" class="col-xs-4" onclick="displayLetter('box4')"></div>
+            <div id="box5" class="col-xs-4" onclick="displayLetter('box5')"></div>
+            <div id="box6" class="col-xs-4" onclick="displayLetter('box6')"></div>
           </div>
           <div class="row game-board">
-            <div id="box7" class="col-xs-4" onclick="displayLetter('box7')">g</div>
-            <div id="box8" class="col-xs-4" onclick="displayLetter('box8')">h</div>
-            <div id="box9" class="col-xs-4" onclick="displayLetter('box9')">i</div>
+            <div id="box7" class="col-xs-4" onclick="displayLetter('box7')"></div>
+            <div id="box8" class="col-xs-4" onclick="displayLetter('box8')"></div>
+            <div id="box9" class="col-xs-4" onclick="displayLetter('box9')"></div>
           </div>
       </div>
       <div class = "player-score">
